[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "serdataclasses"
version = "0.6.1"
description = "Serialize/deserialize Python objects from/to typed structures."
license = "MIT"
readme = "README.md"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
homepage = "https://github.com/pappasam/serdataclasses"
repository = "https://github.com/pappasam/serdataclasses"
keywords = ["typing", "json", "serde", "serialize", "deserialize"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
hypothesis = "^4.44.1"
isort = "^4.3.21"
mypy = "^0.780"
pre-commit = "^1.20.0"
pylint = "^2.4.4"
pytest = "^5.2.2"
toml-sort = "^0.16.1"
tox = "^3.14.1"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = true
skipsdist = true
[testenv]
platform = linux
whitelist_externals = poetry
skip_install = true
commands =
  poetry install
  poetry run black --check --diff serdataclasses tests
  poetry run mypy serdataclasses
  poetry run pylint serdataclasses tests
  poetry run pytest -vv
"""
