[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "serdelicacy"
version = "0.16.0"
description = "Serialize/deserialize Python objects from/to typed structures."
license = "MIT"
readme = "README.md"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
homepage = "https://github.com/pappasam/serdelicacy"
repository = "https://github.com/pappasam/serdelicacy"
keywords = ["typing", "dataclass", "namedtuple", "json", "serde", "serialize", "deserialize"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "20.8b1"
hypothesis = "^4.44.1"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^1.20.0"
pylint = "^2.6.0"
pytest = "^5.2.2"
toml-sort = "^0.16.1"
tox = "^3.14.1"
tox-asdf = "^0.1.0"
docformatter = "^1.3.1"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = true
skipsdist = true
[testenv]
platform = linux
whitelist_externals = poetry
skip_install = true
commands =
  poetry install
  poetry run black --check --diff serdelicacy tests
  poetry run mypy serdelicacy
  poetry run pylint serdelicacy tests
  poetry run pytest -vv
"""
