[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "serdelicacy"
version = "0.18.1"
description = "Serialize/deserialize Python objects from/to typed structures."
license = "MIT"
readme = "README.md"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
homepage = "https://github.com/pappasam/serdelicacy"
repository = "https://github.com/pappasam/serdelicacy"
keywords = ["typing", "dataclass", "namedtuple", "json", "serde", "serialize", "deserialize"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = { version = "^3.3.1", optional = true }
sphinx-rtd-theme = { version = "^0.5.0", optional = true }
m2r2 = { version = "^0.2.7", optional = true }
toml = { version = "^0.10.2", optional = true }

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
hypothesis = ">=4.44.1"
isort = ">=5.6.4"
mypy = ">=0.790"
pre-commit = ">=1.20.0"
pytest = ">=5.2.2"
toml-sort = ">=0.16.1"
docformatter = ">=1.3.1"
nox = ">=2023.4.22"
ruff = ">=0.0.291"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "m2r2", "toml"]
